--- a/src/templates/spreadsheet/display_sheet.html
+++ b/src/templates/spreadsheet/display_sheet.html
@@ -54,9 +54,8 @@
     <input type="submit" value="Submit">
 </form>
 <h3>Download File</h3>
-<form method="post" action="{% url 'spreadsheet:display_csv' sheet.id %}">
-    {% csrf_token %}
-    <input type="submit" value="Download csv">
-</form>
+<input type="button" value = "Download table" onclick="window.location='{% url 'spreadsheet:display_csv' sheet.id %}'" />
+
+
 </body>
 </html>
