--- a/src/templates/spreadsheet/all_sheets.html
+++ b/src/templates/spreadsheet/all_sheets.html
@@ -1,25 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-<h1>All Sheets</h1>
-{% for sheet in sheets %}
-    <a href="{% url 'spreadsheet:display_sheet' sheet.id %}">{{ sheet.name }}</a>
-    <form method="post" action="{% url 'spreadsheet:delete_sheet' %}">
-    {% csrf_token %}
-    <input type="hidden" name="sheet_id" value="{{ sheet.id }}">
-    <input type="submit" value="Delete">
-    </form>
-{% endfor %}
+{% extends "base.html" %}
 
-<h2>Add Sheet</h2>
-<form method="post" action="{% url 'spreadsheet:all_sheets' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Submit">
-</form>
-</body>
-</html>
+{% block body %}
+    <div class="container-fluid">
+        <div class="row">
+
+            <h1 class="text-center">All Sheets</h1>
+            <br>
+            <br>
+            {% for sheet in sheets %}
+                <div class="col-xs-6 col-lg-2" style="float:left;">
+                    <p class="lead"><a href="{% url 'spreadsheet:display_sheet' sheet.id %}">{{ sheet.name }}</a></p>
+
+                    <form method="post" action="{% url 'spreadsheet:delete_sheet' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="sheet_id" value="{{ sheet.id }}">
+                        <button type="submit" class="btn btn-danger btn-lg">Delete</button>
+                    </form>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <br>
+    <br>
+    <h2 class="text-center">Add Sheet</h2>
+    <br>
+    <br>
+
+    <form method="post" action="{% url 'spreadsheet:all_sheets' %}">
+        <div class="text-center form-group">
+
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+        </div>
+    </form>
+
+{% endblock %}
